cynic-codegen/src/fragment_derive/arguments/snapshots/cynic_codegen__fragment_derive__arguments__tests__analyse-5.snap
---
source: cynic-codegen/src/fragment_derive/arguments/tests.rs
assertion_line: 32
expression: "analyse(literals, field, Some(&format_ident!(\"MyArguments\").into()),\n        Span::call_site()).map(|o| o.arguments)"
---
Err(
    Errors {
        errors: [
            Error(
                "missing fields - filters",
            ),
        ],
    },
)
