cynic-codegen/src/fragment_derive/arguments/snapshots/cynic_codegen__fragment_derive__arguments__tests__analyse_errors_without_argument_struct.snap
---
source: cynic-codegen/src/fragment_derive/arguments/tests.rs
assertion_line: 54
expression: "analyse(literals, field, None, Span::call_site()).map(|o| o.arguments)"

---
Err(
    Errors {
        errors: [
            Error(
                "You've provided a variable here, but this QueryFragment does not have an argument_struct.  Please add an argument_struct attribute to the struct.",
            ),
            Error(
                "You've provided a variable here, but this QueryFragment does not have an argument_struct.  Please add an argument_struct attribute to the struct.",
            ),
        ],
    },
)
