cynic-codegen/src/fragment_derive/arguments/snapshots/cynic_codegen__fragment_derive__arguments__tests__case_01_scalars.snap
---
source: cynic-codegen/src/fragment_derive_2/arguments/tests.rs
assertion_line: 30
expression: "analyse(literals, field, Span::call_site()).map(|o| o.arguments)"

---
Ok(
    [
        Field {
            schema_field: InputValue {
                description: None,
                name: FieldName {
                    graphql_name: "anInt",
                },
                value_type: NamedInputType(
                    "Int",
                ),
            },
            value: Literal(
                Int(
                    LitInt {
                        token: 1,
                    },
                ),
            ),
        },
        Field {
            schema_field: InputValue {
                description: None,
                name: FieldName {
                    graphql_name: "aFloat",
                },
                value_type: NamedInputType(
                    "Float",
                ),
            },
            value: Literal(
                Int(
                    LitInt {
                        token: 3,
                    },
                ),
            ),
        },
        Field {
            schema_field: InputValue {
                description: None,
                name: FieldName {
                    graphql_name: "anId",
                },
                value_type: NamedInputType(
                    "ID",
                ),
            },
            value: Literal(
                Str(
                    LitStr {
                        token: "hello",
                    },
                ),
            ),
        },
    ],
)
