cynic-codegen/src/fragment_derive/arguments/snapshots/cynic_codegen__fragment_derive__arguments__tests__case_02_missing_nullable_scalars.snap
---
source: cynic-codegen/src/fragment_derive_2/arguments/tests.rs
assertion_line: 30
expression: "analyse(literals, field, Span::call_site()).map(|o| o.arguments)"

---
Ok(
    [
        Field {
            schema_field: InputValue {
                description: None,
                name: FieldName {
                    graphql_name: "anInt",
                },
                value_type: NullableType(
                    NamedInputType(
                        "Int",
                    ),
                ),
            },
            value: Some(
                Literal(
                    Int(
                        LitInt {
                            token: 1,
                        },
                    ),
                ),
            ),
        },
    ],
)
